fixed overflow in chat

--- a/resources/styles/components/chat.scss
+++ b/resources/styles/components/chat.scss
@@ -1,25 +1,35 @@
+@import '../utils/scrollbar.scss';  
+
 .chat-container {
   display: flex;
   flex-direction: column;
   height: 100%;
   gap: 1rem;
+  overflow: hidden;
 
   .active-chat-user {
     display: flex;
     align-items: center;
-    position: absolute;
+    // position: absolute;
     padding: .75rem;
     color: var(--color-prim-text);
     font-weight: 700;
   }
 
   .chat-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
     flex: 1;
-    overflow-y: auto;
     padding: .75rem;
-    // background-color: #fff;
-    border-radius: 0.5rem;
-    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    ul {
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
+
+      @apply scrollbar;
+    }
   }
 
   .chat-input {
@@ -44,6 +54,37 @@
       outline: none;
       background-color: transparent;
       cursor: pointer;
+    }
+  }
+}
+
+
+.chat-message {
+  display: flex;
+  flex-direction: row;
+
+  .message-avatar {
+    display: flex;
+    border-radius: 99rem;
+    font-size: 1em;
+    width: 2.5rem;
+    height: 2.5rem;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-btn-main);
+    color: var(--color-prim-text);
+    font-weight: 700;
+    p {
+      display: block;
+    }
+  }
+
+  .message-content {
+    display: flex;
+    flex-direction: column;
+    
+    .message-credentials {
+      
     }
   }
 }
